# QuestKeeperAI

./: .gitignore  BUILD.md  CONVERSATION_SYSTEM_REVIEW.md  HANDOFF_2024_12_03.md  IMPLEMENTATION_STATUS.md  PARTY_MANAGEMENT_HANDOFF.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PYTHON313_FIX.md  QUICK_BUILD.md  README.md  SECURITY.md  build.bat  build.sh  build_linux.sh  build_mac.sh  build_windows.bat  cleanup.bat  integration_report.md.resolved  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
docs/: CODE_REVIEW_COMPREHENSIVE.md  RPG-MCP-INTEGRATION.md  SECRET_KEEPER_DEPLOYMENT.md  SECRET_KEEPER_INDEX.md  SECRET_KEEPER_REFERENCE.md  SECRET_KEEPER_START_HERE.md  SECRET_KEEPER_TEST_PROTOCOL.md  SECRET_KEEPER_VISUAL_GUIDE.md  TDD_REFACTORING_PLAN.md
documentation/: 00_MASTER_INDEX.md  Implementation_guide.md  QuestKeeperAI_Modernization_Plan.md  RooCode_DeepDive_Analysis.md  RooCode_Quick_Reference.md
python_backend/: .env.example  build_backend.bat  build_backend.sh  main.py  pyproject.toml  questkeeper.spec  requirements.txt  test_conversations.py
python_backend/app/: __init__.py  config.py  curated_models.py
python_backend/app/llm/: __init__.py  factory.py  provider.py  provider_backup_20251111.py
python_backend/app/mcp/: __init__.py  hub.py
python_backend/app/models/: __init__.py  database.py
python_backend/app/routes/: character.py  chat.py  conversations.py  mcp.py  settings.py
python_backend/app/security/: __init__.py  permission_validator.py
python_backend/app/services/: templates.py  token_counter.py
(+123 files in other folders)
