[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quest-keeper-ai-backend"
version = "0.2.0"
description = "D&D RPG backend for Quest Keeper AI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.0",
    "Flask-CORS==4.0.0",
    "python-dotenv==1.0.0",
    "anthropic>=0.7.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "google-genai>=1.7.0",
    "mcp>=1.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]
